--- a/skill-map/index.html
+++ b/skill-map/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/main-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>skill-map</title>
+    <title>SkillMap</title>
   </head>
   <body>
     <div id="root"></div>
